--- a/.github/workflows/api-docker-image.yml
+++ b/.github/workflows/api-docker-image.yml
@@ -13,8 +13,11 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    # - name: Build the Docker image
+    #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
     
     - name: Login to azure container registry
       uses: docker/login-action@v1
@@ -22,10 +25,11 @@ jobs:
         registry: apiservicerg.azurecr.io
         username: ${{ secrets.AZURE_USERNAME }}
         password: ${{ secrets.AZURE_PASSWORD }}
+
     - name: Build and push
       uses: docker/build-push-action@v3
       with:
         push: true
         context: .
         file: ./Dockerfile
-        tags: user/app:latest
+        tags: apiservicerg.azurecr.io/api-app:latest
