--- a/Deployment/deployment1.yaml
+++ b/Deployment/deployment1.yaml
@@ -34,7 +34,7 @@ spec:
 
       - name: api-app
 
-        image: apiservicerg.azurecr.io/api-app
+        image: apiservicerg.azurecr.io/api-app:latest
 
         ports:
 
