--- a/application.yaml
+++ b/application.yaml
@@ -9,10 +9,10 @@ spec:
   source:
     repoURL: https://github.com/amarsarkar9/api-service.git
     targetRevision: HEAD
-    # path: api-service
+    path: Deployment
   destination:
     server: https://kubernetes.default.svc
-    namespace: myapp
+    # namespace: myapp
 
   syncPolicy:
     syncOptions:
