--- a/.github/workflows/api-docker-image.yml
+++ b/.github/workflows/api-docker-image.yml
@@ -1,35 +1,47 @@
-name: Docker Image CI
+name: eks pipeline
 
+# Only trigger, when the build workflow succeeded
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_run:
+    workflows: ["build"]
+    types:
+      - completed
 
-jobs:
-  build:
+env:
+  AWS_REGION: us-east-1                                         # set this to your preferred AWS region, e.g. us-west-1
+
+jobs: 
+  notify:
     runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
-    # - name: Build the Docker image
-    #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
     
-    - name: Login to azure container registry
-      uses: docker/login-action@v1
-      with:
-        registry: apiservicerg.azurecr.io
-        username: ${{ secrets.AZURE_USERNAME }}
-        password: ${{ secrets.AZURE_PASSWORD }}
+    steps:
+      - name: Check out code
+#         uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-    - name: Build and push
-      uses: docker/build-push-action@v3
-      with:
-        push: true
-        context: .
-        file: ./Dockerfile
-        tags: apiservicerg.azurecr.io/api-app:latest
+      - name: Install kubectl
+#         uses: azure/setup-kubectl@v1
+        uses: azure/setup-kubectl@v3
+        with:
+          version: 'v1.27'
+        id: install
+    
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+              aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+              aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+              aws-region: ${{ env.AWS_REGION }}
+              
+      - name: Update kube config
+        run: aws eks update-kubeconfig --region us-east-1 --name testing
+              
+      - name: Deploy image to eks
+        run: |
+          kubectl delete deploy app -n myapp
+          kubectl apply -f Deployment/deployment1.yaml
+          
+          
+          
+          
+          
