image path change

--- a/Deployment/deployment1.yaml
+++ b/Deployment/deployment1.yaml
@@ -36,7 +36,7 @@ spec:
       - name: api-app
 
         # image: apiservicerg.azurecr.io/api-app:latest
-        image: amarsarkar/app:latest
+        image: ghcr.io/amarsarkar9/api-service:latest
 
         ports:
 
