--- a/Deployment/service.yaml
+++ b/Deployment/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: api-app
-  namespace: prac
+  namespace: myapp
 spec:
   selector:
     app: api-app
