--- a/.github/workflows/deploy_to_eks.yml
+++ b/.github/workflows/deploy_to_eks.yml
@@ -38,7 +38,7 @@ jobs:
               
       - name: Deploy image to eks
         run: |
-          kubectl delete deploy api-app -n myapp
+#          kubectl delete deploy api-app -n myapp
           kubectl apply -f Deployment/deployment1.yaml
           
           
